--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/contact">Contact</a></li>
+              <li><a ng-href="#/chart">Chart</a></li>
             </ul>
           </div>
         </div>
@@ -83,6 +84,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/chart.js/dist/Chart.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -90,6 +92,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/chart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
