--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/chart.js"></script>
+        <script src="scripts/services/participants.js"></script>
         <!-- endbuild -->
 </body>
 </html>
